--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "jest": "^26.6.3"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "csv-parse": "^4.15.4",
     "dotenv": "^9.0.2",
+    "fastify": "^3.15.1",
     "telegraf": "^4.3.0"
   }
 }
