--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "csv-parse": "^4.15.4",
     "dotenv": "^9.0.2",
     "fastify": "^3.15.1",
+    "node-fetch": "^2.6.1",
     "telegraf": "^4.3.0"
   }
 }
