--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node src/telegram-bot.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "axios": "^0.21.1",
     "csv-parse": "^4.15.4",
     "dotenv": "^9.0.2",
+    "express": "^4.17.1",
     "fastify": "^3.15.1",
     "node-fetch": "^2.6.1",
     "telegraf": "^4.3.0"
